manifests/media-tools/readarr/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: readarr
  namespace: media-tools
spec:
  serviceName: readarr
  replicas: 1
  revisionHistoryLimit: 2
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
        name: readarr
        appGroup: media-arr
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      automountServiceAccountToken: false
      priorityClassName: low-priority
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
              - key: kubernetes.io/arch
                operator: In
                values: 
                - "amd64"
      containers:
      - name: readarr
        image: docker.io/linuxserver/readarr:0.4.11-nightly
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
            add:
            - "CHOWN"
            - "SETGID"
            - "SETUID"
            - "DAC_OVERRIDE"
        resources:
          requests:
            cpu: 2m
            memory: 120Mi
          limits:
            # cpu: 600m
            memory: 200Mi
        ports:
        - containerPort: 8787
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 5
        volumeMounts:
        - name: readarr-config
          mountPath: /config
        - name: media
          mountPath: /media 
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      volumes:
        - name: readarr-config
          persistentVolumeClaim:
            claimName: longhorn-readarr-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media
