manifests/media-tools/readarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: readarr
  namespace: media-tools
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "readarr.ucdialplans.com"
  rules:
  - backendRefs:
    - name: readarr-service
      namespace: media-tools
      kind: Service
      port: 8787
